# class-deck-backend

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  utils.py
.github/workflows/: cd.yml  ci.yml
assets/: cards.json
backend/: constants.py  db.sqlite3  settings.py  settings_test.py  urls.py
backend/backend/: settings.py  urls.py
backend/content/: models.py  serializers.py  urls.py  views.py
backend/content/migrations/: 0001_initial.py  0002_initial.py
backend/users/: models.py  urls.py
backend/users/migrations/: 0001_initial.py
content/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
content/management/commands/: seed_cards.py  seed_test_board_posts.py
content/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_card.py  0004_board_is_displayed.py
content/models/: __init__.py  board.py  card.py  comment.py  like.py  post.py
content/signals/: __init__.py  board.py  file.py  user.py
content/tests/: conftest.py
content/tests/factories/: __init__.py  board_factory.py  card_factory.py  post_factory.py
content/tests/integration/: test_board_api.py  test_board_api_list_retrieve.py
core/management/commands/: seed.py
myenv/: pyvenv.cfg
scripts/: prod.sh
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: seed_groups.py  seed_users.py
users/migrations/: 0001_initial.py
users/tests/: conftest.py
users/tests/factories/: __init__.py  user_factory.py
(+17 files in other folders)
